# my-python-template

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
