[project]
name = "my-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
