[project]
name = "my-python-template"
version = "0.1.0"
description = "Minimal Python project template using uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "PTH", "PERF"]
ignore = ["F401", "F403", "F841"]

fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

line-ending = "lf"

docstring-code-format = true

docstring-code-line-length = "dynamic"
